[gd_scene load_steps=14 format=3 uid="uid://daahp3vqn4l8i"]

[ext_resource type="PackedScene" uid="uid://dvcw2d8sntkp5" path="res://ExitDoor.tscn" id="1_bexhn"]
[ext_resource type="Script" uid="uid://dsnoiecwi5yyp" path="res://Level.gd" id="1_t7iv1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qhyq2"]
albedo_color = Color(0.310617, 0.310617, 0.310617, 1)

[sub_resource type="BoxMesh" id="BoxMesh_bexhn"]
material = SubResource("StandardMaterial3D_qhyq2")
size = Vector3(24, 1, 24)

[sub_resource type="BoxShape3D" id="BoxShape3D_t7iv1"]
size = Vector3(24, 1, 24)

[sub_resource type="BoxMesh" id="BoxMesh_2nifc"]
material = SubResource("StandardMaterial3D_qhyq2")
size = Vector3(1, 1, 24)

[sub_resource type="BoxShape3D" id="BoxShape3D_wkftn"]
size = Vector3(1, 1, 24)

[sub_resource type="BoxMesh" id="BoxMesh_q4iis"]
material = SubResource("StandardMaterial3D_qhyq2")
size = Vector3(1, 1, 24)

[sub_resource type="BoxShape3D" id="BoxShape3D_m3clv"]
size = Vector3(1, 1, 24)

[sub_resource type="BoxMesh" id="BoxMesh_mxnmf"]
material = SubResource("StandardMaterial3D_qhyq2")
size = Vector3(24, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_4eo0i"]
size = Vector3(24, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_86ljf"]
material = SubResource("StandardMaterial3D_qhyq2")
size = Vector3(24, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_3ywx5"]
size = Vector3(24, 1, 1)

[node name="Level" type="Node3D"]
script = ExtResource("1_t7iv1")

[node name="Floor" type="StaticBody3D" parent="."]

[node name="FloorMesh" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_bexhn")

[node name="FloorCollision" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_t7iv1")
debug_color = Color(0.403759, 0.24438, 4.81308e-08, 0.42)

[node name="EastWall" type="StaticBody3D" parent="." groups=["walls"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 1, 0)

[node name="EastWallMesh" type="MeshInstance3D" parent="EastWall"]
layers = 4
mesh = SubResource("BoxMesh_2nifc")

[node name="EastWallCollision" type="CollisionShape3D" parent="EastWall"]
shape = SubResource("BoxShape3D_wkftn")

[node name="WestWall" type="StaticBody3D" parent="." groups=["walls"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 1, 0)

[node name="WestWallMesh" type="MeshInstance3D" parent="WestWall"]
layers = 4
mesh = SubResource("BoxMesh_q4iis")

[node name="WestWallCollision" type="CollisionShape3D" parent="WestWall"]
shape = SubResource("BoxShape3D_m3clv")

[node name="NorthWall" type="StaticBody3D" parent="." groups=["walls"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -12)

[node name="NorthWallMesh" type="MeshInstance3D" parent="NorthWall"]
layers = 4
mesh = SubResource("BoxMesh_mxnmf")

[node name="NorthWallCollision" type="CollisionShape3D" parent="NorthWall"]
shape = SubResource("BoxShape3D_4eo0i")

[node name="SouthWall" type="StaticBody3D" parent="." groups=["walls"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 12)

[node name="SouthWallMesh" type="MeshInstance3D" parent="SouthWall"]
layers = 4
mesh = SubResource("BoxMesh_86ljf")

[node name="SouthWallCollision" type="CollisionShape3D" parent="SouthWall"]
shape = SubResource("BoxShape3D_3ywx5")

[node name="ExitDoor" parent="." instance=ExtResource("1_bexhn")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1, -11)

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="PlayerSpawn" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 10)

[node name="NPCSpawn1" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 2, -4)

[node name="NPCSpawn2" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2, -4)

[node name="NPCSpawn3" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -3)
